src/test/deca/context/invalid/return_void_int.deca
// Test la règle 3.24: Pas le droit de return int alors qu'on attend pas de return

class A  {
    void voidMethod(int x){
        return 5;
    }
}



// Resultat:

//TODOTEST